# CardioSeg

./: .gitignore  LICENSE  README.md  environment.yml  environment_win.yml  pyproject.toml
cardioseg/: app.py
cardioseg/assignment/: assign.py
cardioseg/gui/: dock_widgets.py  info_panel.py  layer_events.py  main_viewer.py  measurements_table.py  styles.qss  threading.py
cardioseg/io/: exporters.py
cardioseg/measurements/: measurements.py
cardioseg/models/: cell.py  nucleus.py
cardioseg/segmentation/: cellpose_wrapper.py  flow_viz.py  nuclei_segmentation.py  shape_conversion.py
cardioseg/spatial/: annotation.py  engine.py  loader.py  normalization.py  roi.py
